@@ -464,6 +464,14 @@ export DEBIAN_BUILDGCCVER=3.2
 	is usually only writable as root.
       </para>
     </sect1>
+    <sect1 id="woodybackport">
+      <title>pbuilder backported to stable Debian releases</title>
+      <para>
+	It is known that Brian May does a backport of 
+	pbuilder, available at:
+	<screen>deb http://www.microcomaustralia.com.au/debian/ woody main</screen>
+      </para>
+    </sect1>
   </chapter>
   <chapter id="otheruse">
     <title>Other uses of pbuilder</title>
