@@ -1,3 +1,8 @@
+2003-05-17  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/pbuilder-doc.xml (EXTRAPACKAGES): add notes on pbuilder
+	backport.
+
 2003-04-24  Junichi Uekawa  <dancer@debian.org>
 
 	* Documentation/pbuilder-doc.xml: note that --configfile option
